fix: add vm dependency to wallet exporters in docker-compose

--- a/services/dashboard/docker-compose.yml
+++ b/services/dashboard/docker-compose.yml
@@ -264,6 +264,7 @@ services:
       - yearn-exporter
     restart: always
     depends_on:
+      - victoria-metrics
       - postgres
 
   vmagent:
